<resources>
    <string name="app_name">Files</string>
    <!-- Strings used for fragments for navigation -->

    <string name="search">Search</string>
    <string name="internalStorage">Internal storage</string>
    <string name="thisPhone">This phone</string>
    <string name="folderNotFound">Could not open the specified folder. Either the folder doesn\'t exist or you don\'t have permissions to read it.</string>
    <string name="emptyFolder">This folder is empty.</string>
    <string name="folder">Folder</string>
    <plurals name="bytes">
        <item quantity="one">%d byte</item>
        <item quantity="other">%d bytes</item>
    </plurals>
    <plurals name="kilobytes">
        <item quantity="one">%d kB</item>
        <item quantity="other">%d kB</item>
    </plurals>
    <plurals name="megabytes">
        <item quantity="one">%d MB</item>
        <item quantity="other">%d MB</item>
    </plurals>
    <plurals name="gigabytes">
        <item quantity="one">%d GB</item>
        <item quantity="other">%d GB</item>
    </plurals>
    <plurals name="terabytes">
        <item quantity="one">%d TB</item>
        <item quantity="other">%d TB</item>
    </plurals>
    <string name="freeDiskSpace">%s free of %s</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="selected">Selected</string>
    <string name="createNew">New</string>
    <string name="open">Open</string>
    <string name="properties">Properties</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="emptyNotAllowed">File or folder names may not be empty.</string>
    <string name="slashNotAllowed">File or folder names may not contain the \"/\" character.</string>
    <string name="couldNotCreate">Could not create the file or folder \'%s\': %s</string>
    <string name="alreadyExists">The file or folder \'%s\' already exists.</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Do you really want to delete \'%s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="multipleDeleteConfirmation">Do you really want to delete these files?</string>
    <string name="couldNotDelete">Could not delete \'%s\': %s</string>
    <string name="rename">Rename</string>
    <string name="couldNotRename">Could not rename this file or folder: %s</string>
    <string name="couldNotMove">Could not move \'%s\': %s</string>
    <string name="copyHere">Copy here</string>
    <string name="moveHere">Move here</string>
    <string name="createShortcutsHere">Create shortcuts here</string>
    <string name="couldNotCopy">Could not copy \'%s\': %s</string>
    <string name="showHiddenFiles">Show hidden files</string>
    <string name="showFileExtensions">Show file extensions</string>
    <string name="manageFileTypes">Manage file types</string>
    <string name="about">About Files</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="aboutString"><![CDATA[Files %1$s<br /><br />By Gustav Lindberg<br /><br />This app is licensed under the <a href="%3$s">GNU GPL 3.0</a>.<br /><br />Source code: <a href="%2$s">%2$s</a>]]></string>
    <string name="description">Description</string>
    <string name="defaultFileTypeDescription">%s file</string>
    <string name="shortcut">Shortcut</string>
    <string name="file">File</string>
    <string name="configurationSettings">Configuration settings</string>
    <string name="selectExtension">Select a file type</string>
    <string name="icon">Icon</string>
    <!-- Strings used for fragments for navigation -->

    <string name="changeIcon">Change icon</string>
    <string name="targetDoesNotExist">The target of this shortcut (%s) cound not be found.</string>
    <string name="internetShortcut">Internet shortcut</string>
    <string name="textDocument">Text document</string>
    <string name="unknownApp">Unknown app</string>
    <string name="openWith">Open with</string>
    <string name="couldNotOpen">Could not open this file: %s</string>
    <string name="builtInIcon">Built-in icon</string>
    <string name="iconFromApp">Icon from app</string>
    <string name="appInstallerPackage">App installer package</string>
    <string name="openWithHelpText">To change the default app for a file type, long click twice on a file of that type and select \"Open with\".</string>
    <string name="add">Add</string>
    <string name="addFileType">Add file type</string>
    <string name="enterExtension">Enter a file extension</string>
    <string name="deleteFileType">Delete file type</string>
    <string name="deleteFileTypeConfirmation">Do you really want to delete \'%s\' from the list of known file extensions? This will only remove custom information such as the icon or the description, it won\'t remove which app is used to open it since that\'s managed by the Android system.</string>
    <string name="archiveFormat">%s archive</string>
    <string name="imageFormat">%s image</string>
    <string name="audioFormat">%s audio file</string>
    <string name="videoFormat">%s video</string>
    <string name="compress">Compress to</string>
    <string name="failedToCompress">Could not compress to an archive: %s</string>
    <string name="overwriteConfirmation">The destination file already exists. Do you want to overwrite it?</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="mergeConfirmation">The destination folder already exists. Do you want to merge them? If you do, any files with the same name will be overwritten.</string>
    <string name="couldNotViewProperties">Could not view the properties for this file.</string>
    <string name="type">Type: %s</string>
    <string name="size">Size: %s (%d bytes)</string>
    <string name="lastModified">Last modified: %s</string>
    <string name="compressedSize">Compressed size: %s (%d bytes)</string>
    <string name="computingSize">Size: Computing…</string>
    <string name="target">Target: %s</string>
    <string name="mediaFolder">Media folder</string>
    <string name="nomediaError">Could not change the media status of this folder: %s</string>
    <string name="loading">Loading…</string>
    <string name="contents">Contents: %d files, %d folders</string>
    <string name="computingContents">Contents: Computing…</string>
    <string name="showInNewMenu">Show in New menu</string>
    <string name="cannotMoveThisPhoneFolder">The \"This phone\" folder can\'t be moved.</string>
    <string name="cannotCopyThisPhoneFolder">The \"This phone\" folder can\'t be copied.</string>
    <string name="cannotRenameThisPhoneFolder">The \"This phone\" folder can\'t be renamed.</string>
    <string name="cannotDeleteThisPhoneFolder">The \"This phone\" folder can\'t be deleted.</string>
    <string name="cannotMoveSdCard">SD cards can\'t be moved.</string>
    <string name="cannotRenameSdCard">SD cards can\'t be renamed</string>
    <string name="cannotDeleteSdCard">SD cards can\'t be deleted.</string>
    <string name="entryBothFileAndDirectory">The file \'%s\' cannot be both a file and a directory.</string>
    <string name="failedToCreateDirectory">Failed to create directory \'%s\'.</string>
    <string name="failedToRename">Failed to rename \'%s\' to \'%s\'.</string>
    <string name="failedToDelete">Failed to delete \'%s\'.</string>
    <string name="unknownError">Unknown error.</string>
    <string name="failedToCreateFile">Failed to create file \'%s\'.</string>
    <string name="formatNotSupported">This file is damanged or its format is not supported.</string>
    <string name="cannotCreateFilesInThisPhoneFolder">Cannot create files in the \"This phone\" folder.</string>
    <string name="fileAlreadyExists">A file with that name already exists.</string>
    <string name="fileName">File name</string>
    <string name="save">Save</string>
    <string name="saveAs">Save as...</string>
    <string name="openArchive">Open archive</string>
    <string name="openShortcut">Open shortcut target</string>
    <string name="openUrl">Open webpage</string>
    <string name="saveAsFileMissing">You must choose a file to save.</string>
    <string name="couldNotSave">Could not save this file: %s</string>
    <string name="pinnedFolders">Pinned folders</string>
    <string name="pin">Pin to navigation drawer</string>
    <string name="unpin">Unpin from navigation drawer</string>
    <string name="iconFromFile">Icon from file...</string>
    <string name="fileType">File type</string>
    <string name="allFiles">All files</string>
    <string name="fileContainsNoIcons">This file doesn\'t contain any icon.</string>
    <string name="appIconFormats">Icons supported by this app</string>
    <string name="windowsIconFormats">Icons supported by Windows</string>
    <string name="enterUrl">URL to create an internet shortcut to</string>
    <string name="invalidUrl">This URL is invalid.</string>
    <string name="hintPasteFromBrowser">Paste an address from a browser</string>
    <string name="couldNotChangeIcon">Could not change icon: %s</string>
    <string name="fileDoesNotExist">The file \'%s\' does not exist.</string>
    <string name="cannotSelectDirectory">You must select a file, not a directory.</string>
    <string name="targetMustBeOnSameDrive">The target of a shortcut must be on the same SD card as the shortcut itself.</string>
</resources>