<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SettingsActivity_showHiddenFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showHiddenFiles"
                android:textSize="18sp"
                app:switchPadding="8dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SettingsActivity_showFileExtensions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showFileExtensions"
                android:textSize="18sp"
                app:switchPadding="8dp"/>

            <Button
                android:id="@+id/SettingsActivity_fileTypesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manageFileTypes"/>

            <Button
                android:id="@+id/SettingsActivity_helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"/>

            <Button
                android:id="@+id/SettingsActivity_feedbackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"/>

            <Button
                android:id="@+id/SettingsActivity_aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>