<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.SaveAsActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    android:fitsSystemWindows="true">

    <include
        layout="@layout/activity_file_explorer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/BrowseActivity_fileNameInput"
            android:text="@string/fileName"
            android:textColor="@color/textColor"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/BrowseActivity_fileNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/BrowseActivity_finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/BrowseActivity_fileTypeInput"
            android:text="@string/fileType"
            android:textColor="@color/textColor"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/BrowseActivity_fileTypeInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
</LinearLayout>